fix: toolbar now gets fixed to the top when scrolled down and exportar button is now always visible

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,3 +16,9 @@ body {
     /* color-scheme: dark; */
   }
 }
+
+main {
+  margin-top: 90px;
+  margin-bottom: 80px;
+}
+
